@@ -537,6 +537,7 @@ class HEVC(SettingPanel):
             x265_params=x265_params_text.split(":") if x265_params_text else [],
             hdr10plus_metadata=self.widgets.hdr10plus_metadata.text().strip().replace("\\", "/"),
             lossless=self.widgets.lossless.isChecked(),
+            extra=self.ffmpeg_extras,
         )
 
         if self.mode == "CRF":
