@@ -41,7 +41,6 @@ class VideoSettings(BaseDataClass):
     selected_track: int = 0
     output_path: Path = None
     scale: Union[str, None] = None
-    ffmpeg_extra: str = ""
     deinterlace: bool = False
     video_encoder_settings: Union[
         x265Settings,
