@@ -3,6 +3,10 @@
 ## Version 4.0.4
 
 * Fixing #149 Cannot set subtitle disposition in 4.0+ (thanks to Zeid164)
+* Fixing #150 FFmpeg extras not able to be set (thanks to kipperdawn)
+* Fixing exact / fast time selector not working
+* Fixing subtitle burn in not working (for picture images)
+* Fixing that text based subtitles could show as being burned-in-able
 
 ## Version 4.0.3
 
